reusable-ai-wellness/force-app/main/default/objects/Suggestion__c/Suggestion__c.object-meta.xml
<CustomObject>
    <label>Suggestion</label>
    <nameField>
        <label>Suggestion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Suggestions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>