reusable-ai-wellness/force-app/main/default/objects/Suggestion__c/fields/Daily_Log__c.field-meta.xml
<CustomField>
    <fullName>Daily_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Daily Log</label>
    <referenceTo>Daily_Log__c</referenceTo>
    <relationshipLabel>Suggestions</relationshipLabel>
    <relationshipName>Suggestions</relationshipName>
    <type>Lookup</type>
</CustomField>