reusable-ai-wellness/force-app/main/default/objects/Suggestion__c/fields/Suggestion_Text__c.field-meta.xml
<CustomField>
    <fullName>Suggestion_Text__c</fullName>
    <label>Suggestion Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>